# python-civitas

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCS_TODO.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  mydb.db  objects.inv  pyproject.toml  rename_to_civitas.sh  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  security.yml
adapters/: index.html
agency/: __init__.py  __main__.py  bus.py  components.py  config.py  errors.py  messages.py  process.py  registry.py  runtime.py  serializer.py  supervisor.py  worker.py
agency/adapters/: crewai.py  langgraph.py  openai.py
agency/cli/: __init__.py  app.py  dashboard.py  deploy.py  init.py  run.py  state.py  topology.py  version.py
agency/cli/_templates/: README.md.tmpl  agents.py.tmpl  pyproject.toml.tmpl  run.py.tmpl
agency/dashboard/: __init__.py  renderer.py
agency/observability/: __init__.py  export_backend.py  otel_agent.py  tracer.py
agency/plugins/: __init__.py  anthropic.py  fiddler.py  gemini.py  litellm.py  loader.py  mistral.py  model.py  openai.py  otel.py  sqlite_store.py  state.py  tools.py
agency/transport/: __init__.py  inprocess.py  nats.py  zmq.py
api/bus/: index.html
api/evalloop/: index.html
api/gateway/: index.html
api/genserver/: index.html
api/messages/: index.html
api/observability/: index.html
api/plugins/: index.html
api/process/: index.html
api/runtime/: index.html
api/supervisor/: index.html
api/transport/: index.html
architecture/: index.html
civitas/: __init__.py  __main__.py  bus.py  components.py  config.py  errors.py  evalloop.py  genserver.py  messages.py  process.py  registry.py  runtime.py  serializer.py  supervisor.py  topology_server.py  worker.py
civitas/adapters/: __init__.py  crewai.py  langgraph.py  openai.py
civitas/audit/: __init__.py  sinks.py  types.py
civitas/cli/: __init__.py  app.py  dashboard.py  deploy.py  init.py  run.py  security.py  state.py  topology.py  version.py
civitas/cli/_templates/: README.md.tmpl  __init__.py  (+4 more)
civitas/dashboard/: __init__.py  collector.py  renderer.py
civitas/eval/: __init__.py  exporters.py
civitas/gateway/: __init__.py  asgi.py  contracts.py  core.py  h3.py  middleware.py  openapi.py  router.py  types.py
civitas/mcp/: __init__.py  client.py  tool.py  types.py
civitas/observability/: __init__.py  export_backend.py  otel_agent.py  span_queue.py  tracer.py
civitas/plugins/: __init__.py  anthropic.py  fiddler.py  gemini.py  litellm.py  loader.py  mistral.py  openai.py  otel.py  postgres_store.py  sqlite_store.py  state.py  tools.py
civitas/sandbox/: __init__.py  bubblewrap.py  config.py
civitas/secrets/: __init__.py  providers.py  substitution.py
civitas/security/: __init__.py  config.py  identity.py  registry.py  signing.py
civitas/transport/: __init__.py  inprocess.py  nats.py  zmq.py
cli/: index.html
concepts/: index.html
contributing/: index.html
deployment/: index.html
design/civitas-presidium-boundary/: index.html
design/dynamic-spawning/: index.html
design/evalloop/: index.html
design/gateway-api-surface/: index.html
design/genserver/: index.html
design/http-gateway/: index.html
design/mcp-integration/: index.html
design/security-hardening/: index.html
docs/: adapters.md  architecture.md  cli.md  concepts.md  contributing.md  deployment.md  evalloop.md  faq.md  gateway.md  genserver.md  getting-started.md  index.md  mcp.md  messaging.md  milestones.md  observability.md  plugins.md  supervision.md  topology.md  transports.md
docs/api/: bus.md  evalloop.md  gateway.md  genserver.md  messages.md  observability.md  plugins.md  process.md  runtime.md  supervisor.md  transport.md
docs/design/: civitas-presidium-boundary.md  dynamic-spawning.md  evalloop.md  gateway-api-surface.md  genserver.md  http-gateway.md  mcp-integration.md  security-hardening.md
docs/rfc/: 0001-tool-retrieval.md
docs/security/: architecture.md  enterprise-checklist.md  threat-model.md
evalloop/: index.html
examples/: distributed.yaml  dynamic_spawning.py  eval_agent.py  hello_agent.py  http_gateway.py  mcp_agent.py  multi_process.yaml  observable_pipeline.py  production.yaml  rate_limiter.py  research_assistant.py  research_pipeline.py  self_sufficient_agent.py  stateful_workflow.py  supervised_agent.py  supervision_tree.py  topology.yaml
examples/frameworks/: langgraph_on_agency.py  langgraph_on_civitas.py  openai_sdk_on_agency.py  openai_sdk_on_civitas.py
examples/patterns/: fan_out_fan_in.py  human_in_the_loop.py  pipeline.py  router.py
examples/quickstart/: 01_hello_agent.py  02_supervised_agent.py  03_multi_agent.py  04_with_llm.py
faq/: index.html
gateway/: index.html
genserver/: index.html
getting-started/: index.html
mcp/: index.html
messaging/: index.html
milestones/: index.html
observability/: index.html
plugins/: index.html
rfc/0001-tool-retrieval/: index.html
search/: search_index.json
security/architecture/: index.html
security/enterprise-checklist/: index.html
security/threat-model/: index.html
supervision/: index.html
tests/: conftest.py
tests/integration/: test_m1_1_hello_agent.py  test_m1_2_supervision.py  test_m1_3_pipeline.py  test_m1_4_llm.py  test_m1_5_otel.py  test_m1_6_tree.py  test_m2_1_zmq.py  test_m2_2_nats.py  test_m2_3_plugins.py  test_m2_6_adapters.py  test_m2_7_deploy.py  test_m2_8_state.py  test_m3_1_cli.py  test_m3_2_topology.py  test_m3_3_dashboard.py
tests/unit/: test_audit.py  test_bus.py  test_capability_registry.py  test_dynamic_supervisor.py  test_errors.py  test_eval_exporters.py  test_evalloop.py  test_gateway.py  test_genserver.py  test_loader.py  test_mcp.py  test_message.py  test_observability.py  test_process.py  test_registry.py  test_runtime.py  test_sandbox.py  test_secrets.py  test_security.py  test_serializer.py  test_state_stores.py  test_supervisor.py  test_topology_server.py  test_transport.py  test_transport_security.py  test_worker.py
topology/: index.html
transports/: index.html
(+13 files in other folders)
